# todo_pc

./: CHANGELOG.md  LICENSE  README.md  components.d.ts  electron-builder.json5  index.html  package.json  tsconfig.json  vite.config.ts
electron/main/: index.ts
src/: App.vue  env.d.ts  main.ts  style.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: book.ts  feedback.ts  group.ts  index.ts  recycle.ts  request.ts
src/assets/: CHANGELOG.ts  global.scss  resetli.scss
src/components/: Editor.vue  Groups.vue  Items.vue  Log.vue  titleBar.vue
src/crypt/: index.ts
src/hooks/: menus.ts  recycle.ts  refresh.ts  update.ts  utils.ts  version.ts
src/layout/: Index.vue
src/model/: book.ts  crypt.ts  item_group.ts  menu.ts  recycle.ts  system.ts  todo_item.ts  user.ts
src/router/: index.ts
src/store/: database.ts  editor.ts  groupItem.ts  index.ts  logs.ts  quadrant_todo.ts  user.ts
src/views/: About.vue  BookNote.vue  Center.vue  DbTest.vue  Feedback.vue  GlobalSearch.vue  Home.vue  Layout.vue  LockScreen.vue  RecycleBin.vue  Setting.vue  TestSort.vue  TodoManage.vue  login.vue  register.vue  todoManager.vue
src/views/FourQuadrant/: Index.vue  Quadrant.vue  api.ts
